# from_MLresearch_to_prod

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: plot_backtest.py
src/power_forecaster/: __init__.py  cli.py  config.py  monitoring.py
src/power_forecaster/backtest/: __init__.py  engine.py  metrics.py  strategy.py
src/power_forecaster/data/: __init__.py  base.py  entsoe.py  synthetic.py
src/power_forecaster/features/: __init__.py  base.py  transformers.py
src/power_forecaster/models/: __init__.py  base.py  baseline.py  gbm.py
src/power_forecaster/serving/: __init__.py  api.py  predictor.py  schemas.py
src/power_forecaster/training/: __init__.py  train.py
tests/: conftest.py  test_api.py  test_backtest.py  test_data.py  test_features.py  test_models.py  test_monitoring.py
