[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-price-forecaster"
version = "0.1.0"
description = "Day-ahead electricity price forecasting and trading backtest, productionized with full MLOps."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mohamed Mahmoud" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "mlflow>=2.12",
    "prometheus-client>=0.20",
    "joblib>=1.4",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
entsoe = ["entsoe-py>=0.6"]

[project.scripts]
ppf = "power_forecaster.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
